[package]
name = "BackEnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
dotenv = "0.15.0"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = [
    "trace",

] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
